# agent-communication

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TESTING_COVERAGE.md  docker-compose.test.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
agent_communication/: __init__.py  base.py  channels.py  exceptions.py  logger.py  protocols.py  utils.py
agent_communication/routers/: __init__.py  base.py  rabbitmq_router.py  redis_router.py
tests/: __init__.py
tests/examples/: test_payment_example.py
tests/integration/: conftest.py  test_00_container_setup.py  test_01_redis_connectivity.py  test_02_rabbitmq_connectivity.py  test_10_redis_router.py  test_11_rabbitmq_router.py
tests/unit/: __init__.py  test_base_classes.py  test_exceptions.py  test_logger.py  test_message_routing.py
